--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
     "@prisma/client": "^5.22.0",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/web3.js": "^1.95.5",
     "autoprefixer": "^10.4.20",
+    "countries-and-timezones": "^3.7.2",
+    "country-flag-icons": "^1.5.13",
+    "daisyui": "^4.12.14",
+    "lucide-react": "^0.462.0",
     "postcss": "^8.4.49",
     "prisma": "^5.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
