--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "npx prisma generate && npm run build"
   functions = "netlify/functions"
   publish = "dist"
+
+[functions]
+  node_bundler = "esbuild"
+
+[[plugins]]
+  package = "@netlify/plugin-prisma"
