--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack --config webpack.config.js --watch --mode=development"
   },
   "dependencies": {
+    "daisyui": "^4.12.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -15,11 +16,15 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.11.0",
     "dotenv-webpack": "^8.1.0",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.15",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   }
