--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,9 @@ publish = "dist"
 
 [functions]
 node_bundler = "esbuild"
+
+[dev]
+framework = "vite"
+targetPort = 5173
+port = 8888
+publish = "dist"
