--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@7.10.0",
   "scripts": {
     "dev:web": "netlify dev --command \"turbo run dev --filter web\"",
-    "build:web": "pnpm --filter web build",
+    "build:web": "turbo run build --filter=web...",
     "lint:web": "pnpm --filter web lint",
     "dev:chrome-extension": "pnpm --filter chrome-extension dev",
     "build:chrome-extension": "pnpm --filter chrome-extension build",
