--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -1,36 +1,27 @@
 {
-  "name": "chrome-extension",
-  "version": "1.0.0",
-  "description": "BORE dVPN Chrome Extension",
+  "name": "@bore/chrome-extension",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --debug",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint ."
   },
   "dependencies": {
-    "daisyui": "^4.12.14",
-    "lucide-react": "^0.263.1",
+    "@bore/ui": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
-    "@eslint/js": "^9.15.0",
-    "@types/node": "^22.10.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
     "postcss": "^8.4.49",
-    "rollup-plugin-copy": "^3.5.0",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.1.0"
+    "vite": "^6.0.1"
   }
 }
