--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@bore/ui",
   "version": "0.0.1",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "private": true,
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts",
     "dev": "tsup src/index.tsx --format esm,cjs --dts --watch",
@@ -10,34 +13,35 @@
     "build-storybook": "storybook build"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@storybook/addon-essentials": "^8.4.6",
-    "@storybook/addon-interactions": "^8.4.6",
-    "@storybook/addon-onboarding": "^8.4.6",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/addon-themes": "^8.4.6",
-    "@storybook/blocks": "^8.4.6",
-    "@storybook/builder-vite": "^8.4.6",
-    "@storybook/react": "^8.4.6",
-    "@storybook/react-vite": "^8.4.6",
-    "@storybook/test": "^8.4.6",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-links": "^8.0.0",
+    "@storybook/addon-themes": "^8.0.0",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/react": "^8.0.0",
+    "@storybook/react-vite": "^8.0.0",
+    "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.14",
-    "lucide-react": "^0.263.1",
     "postcss": "^8.4.49",
-    "prop-types": "^15.8.1",
-    "storybook": "^8.4.6",
+    "storybook": "^8.0.0",
     "tailwindcss": "^3.4.15",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
-    "vite": "^5.1.0"
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "country-flag-icons": "^1.5.9",
+    "lucide-react": "^0.358.0",
+    "tailwind-merge": "^2.2.1"
   }
 }
