--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,12 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["^build"]
+    },
+    "storybook": {
+      "dependsOn": ["build"],
+      "outputs": []
     }
   }
 }
