--- a/package.json
+++ b/package.json
@@ -1,7 +1,31 @@
 {
   "private": true,
-  "name": "bore-monorepo",
+  "name": "bore",
   "version": "1.0.0",
+  "description": "Web3-enabled proxy/VPN node management platform with Solana authentication, Chrome extension, and Vultr cloud integration for decentralized network infrastructure",
+  "keywords": [
+    "proxy",
+    "vpn",
+    "node-management",
+    "solana",
+    "web3",
+    "blockchain",
+    "chrome-extension",
+    "netlify",
+    "postgresql",
+    "prisma",
+    "vultr",
+    "cloud-infrastructure",
+    "react",
+    "typescript",
+    "monorepo",
+    "turbo",
+    "vite",
+    "tailwindcss",
+    "daisyui"
+  ],
+  "author": "whaleen",
+  "license": "MIT",
   "packageManager": "pnpm@7.10.0",
   "workspaces": [
     "apps/*",
