Complete refactor: Remove shared component library, add Vultr integration, convert to npm
- Removed packages/ui and Storybook complexity
- Moved UI components directly into apps
- Added comprehensive Vultr API integration (instances, plans, regions, OS)
- Updated Prisma schema with VultrInstance model
- Converted from pnpm to npm workspaces
- Enhanced VultrNodeCreator with dynamic data loading
- Chrome extension now shows Vultr instances alongside regular nodes

--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,1 +1,4 @@
-DATABASE_URL=postgresql://neondb_owner:gQEjOUtP52Kx@ep-patient-lake-a57asuhu.us-east-2.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:gQEjOUtP52Kx@ep-patient-lake-a57asuhu-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+# Vultr API Key for cloud instance management
+VULTR_API_KEY=your_vultr_api_key_here
