--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -17,9 +17,7 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@bore/ui": ["../../packages/ui/src"],
-      "@bore/ui/*": ["../../packages/ui/src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
