--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@bore/ui": "workspace:*",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "country-flag-icons": "^1.5.9",
+    "lucide-react": "^0.358.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
