--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "country-flag-icons": "^1.5.9",
+    "lucide-react": "^0.358.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.2.1"
   }
 }
