Fix Netlify build configuration
- Update netlify.toml to use npm instead of pnpm
- Fix build command to use correct workspace syntax
- Remove pnpm references from web app build script

--- a/apps/web/netlify.toml
+++ b/apps/web/netlify.toml
@@ -3,6 +3,9 @@ base = "apps/web"
 publish = "dist"
 functions = "netlify/functions"
 
+[build]
+command = "npm run prisma:generate && npm run build"
+
 [dev]
 framework = "#custom"
 command = "npx vite"
