Fix build command to run from root directory
- Build command now runs from repo root where prisma:generate script exists
- Uses workspace syntax to build the web app specifically

--- a/apps/web/netlify.toml
+++ b/apps/web/netlify.toml
@@ -2,7 +2,7 @@
 base = "apps/web"
 publish = "dist"
 functions = "netlify/functions"
-command = "npm run prisma:generate && npm run build"
+command = "cd ../.. && npm run prisma:generate && npm run build --workspace=@bore/web"
 
 [dev]
 framework = "#custom"
