Add missing Tailwind CSS dependencies to fix build

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,9 +15,13 @@
   "devDependencies": {
     "@netlify/functions": "^2.8.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "boring-name-generator": "^1.0.3",
     "concurrently": "^9.1.0",
     "netlify-cli": "^17.0.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "~5.1.6",
     "vite": "^6.0.1"
   },
   "dependencies": {
