--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,9 @@
     "@prisma/client": "^5.22.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "country-flag-icons": "^1.5.9",
