--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@solana/web3.js": "^1.95.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "countries-and-timezones": "^3.8.0",
     "country-flag-icons": "^1.5.9",
     "lucide-react": "^0.358.0",
     "react": "^18.3.1",
